--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "@google/genai": "^1.20.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -64,6 +63,7 @@
     "memorystore": "^1.6.7",
     "multer": "^2.0.2",
     "next-themes": "^0.4.6",
+    "openai": "^4.52.7",
     "openid-client": "^6.8.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -114,3 +114,4 @@
     "bufferutil": "^4.0.8"
   }
 }
+
